# transit34

./: .dockerignore  .gitignore  Dockerfile  README.md  justfile  pyproject.toml
.github/workflows/: docker.yml
src/t34/: __init__.py  dirs.py  fleet.py  geoindexing.py  utils.py
src/t34/endpoints/: api.py  website.py
src/t34/providers/: database.py  on_api.py
src/t34/templates/: base.html  bus.html  index.html  line.html  maplibre.html
src/t34/templates/icons/: bus.html  switch_direction.html
src/t34/templates/partials/: line_announcements.html  line_schedule.html  search_stops.html
src/t34/translations/: en.json  tr.json
transit34_cli/: README.md  pyproject.toml
transit34_cli/sql/: create_indexes.sql
transit34_cli/src/transit34_cli/: __init__.py  __main__.py  api_calls.py  env.py  utils.py
transit34_cli/src/transit34_cli/subcommands/: __init__.py  iett_download.py
transit34_cli/src/transit34_cli/subcommands/gtfs_to_dataset/: __init__.py
transit34_fastapi/: README.md  pyproject.toml
transit34_fastapi/src/transit34_fastapi/: __init__.py  dirs.py  env.py  geoindexing.py  utils.py
transit34_fastapi/src/transit34_fastapi/endpoints/: api.py  website.py
transit34_fastapi/src/transit34_fastapi/providers/: database.py  on_api.py
transit34_fastapi/templates/: stop.html
transit34_fastapi/templates/partials/: line_route.html  line_stops.html  nearby_stops.html  search_lines.html  stop_announcements.html  stop_arrivals.html
transit34_models/: README.md  pyproject.toml
transit34_models/src/transit34_models/: __init__.py  arrival.py  coordinates.py  line.py  line_announcement.py  line_info.py  line_on_stop.py  line_stop.py  live_bus.py  live_bus_individual.py  nearby_stop.py  route.py  route_info.py  stop.py  stop_announcement.py  stop_info.py  stop_without_coordinates.py  timetable_trip.py
transit34_on_api/: README.md  pyproject.toml
transit34_on_api/src/transit34_on_api/: __init__.py  api_calls.py  cache.py  constants.py  env.py  headers.py  utils.py
