[project]
name = "t34"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "redis>=5.1.0",
    "models",
    "on_api"
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
models = { workspace = true }
on_api = { workspace = true }

