[project]
name = "transit34-cli"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Oğuz Kurt", email = "kurt.oguz@outlook.com" }
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.8.2",
    "duckdb>=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
"transit34-cli" = "transit34_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/transit34_cli"]
