[project]
name = "transit34-on-api"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Oğuz Kurt", email = "kurt.oguz@outlook.com" }
]
dependencies = [
    "httpx>=0.27.0",
    "python-redis-cache>=4.0.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/transit34_on_api"]
